--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 
 <head>
     <meta charset="utf-8">
 
     <title>Tree Example</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css" />
+    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin = "anonymous">
+    <link rel="stylesheet" href = "./index.css" />
     <script src="JavaOutput.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-1" id="logo">
-                    <img src="logoTree.png" alt="logo" />
-                </div>
-                <div class="col-11">
-                    <h1>Visualisierung statischer Attribute</h1>
-                </div>
-            </div>
-        </div>
+        <img src="handshake.png" alt = "HandshakeLogo" />
     </header>
     <main>
+        <h1>Visualisierung statischer Attribute</h1>
         <form id="myForm">
-            <div class="row">
-                <div id="inputToHandle">
+            <div class = "row">
+                <div id = "inputToHandle">
                     <span>Trage hier den Namen des gewünschten Attributes ein:</span>
-                    <input id="attributeName" name="tollerName" type="text" />
-                    <button type="submit" id="submitAttribute" disabled="disabled"  >
+                    <input id = "attributeName" name = "tollerName" type = "text" />
+                    <button type ="submit" id = "submitAttribute" disabled = "disabled">
                         submit
                     </button>
-
                 </div>
             </div>
         </form>
         <p id="demo"></p>
         <!-- load the d3.js library -->
-        <script src="http://d3js.org/d3.v3.min.js"></script>
-        <script src="indexVertical.js"></script>
+        <script src = "http://d3js.org/d3.v3.min.js"></script>
+        <script src = "indexVertical.js"></script>
     </main>
 </body>
 <footer>
